# choseStock

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.supergateway  README.md  README.md.backup  choseStock.py  docker-compose.supergateway.yml  pyproject.toml  stock.go  test_implementation.py
dataflows_mcp/: README.md  __init__.py
dataflows_mcp/core/: __init__.py  a_share_technical.py  akshare_client.py  exceptions.py  factories.py  logging.py  session_cache.py  utils.py
dataflows_mcp/docs/archive/: README.md  plan.md  task.md
dataflows_mcp/scripts/: diagnose.py
dataflows_mcp/server/: __init__.py  mcp_server.py
dataflows_mcp/tests/: __init__.py  conftest.py  test_data_format.py  test_mcp_server.py  test_mcp_tools.py  test_schemas.py
dataflows_mcp/tests/contract/: __init__.py  test_heartbeat_contract.py
dataflows_mcp/tests/integration/: test_heartbeat_integration.py
dataflows_mcp/tools/: __init__.py  mcp_tools.py  schemas.py
templates/: cheap.html  excellent.html  index.html
